deployment.yaml
# kubectl create secret docker-registry ghcr-auth-token --docker-server=ghcr.io --docker-username=mzalan --docker-password=<TOKEN>


apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-action-teszt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-action-teszt
  template:
    metadata:
      labels:
        app: github-action-teszt
    spec:
      containers:
        - name: github-action-teszt-container
          image: ghcr.io/mzalan/ghaction-k8s-13a-acsop:1773131448
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-auth-token


---

apiVersion: v1
kind: Service
metadata:
  name: github-action-teszt-cluster-ip-service
spec:
  selector:
    app: github-action-teszt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-test-ingress
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16, 193.225.219.0/24
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' 

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - github-action-0310-mzalan.jcloud.jedlik.cloud
      secretName: jokes-certificate

  rules:
    - host: github-action-0310-mzalan.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-action-teszt-cluster-ip-service
                port:
                  number: 80
